<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChatActivity" >

   <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true" 
		android:focusableInTouchMode="true" 
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >
        
        <Button
            android:id="@+id/set_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/text" 
            android:onClick="switchInput"/>

        <com.plus.cloudcontacts.RecordButton
            android:id="@+id/record_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/select_picture"
            android:layout_toRightOf="@+id/set_input"
            android:text="@string/text_btn_record"
            android:visibility="invisible" />

        <Button
            android:id="@+id/select_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/send_pic"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/et_msg_tbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_sendmsg"
            android:layout_toRightOf="@+id/set_input"
            android:ems="10"/>

        <Button
            android:id="@+id/btn_sendmsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="btnSendmsgClicked"
            android:text="@string/text_btn_sendmsg" />

    </RelativeLayout>

    <ListView
        android:id="@+id/lvchat"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/relativeLayout1"
        android:layout_alignParentLeft="true"
        android:fastScrollEnabled="true"
        android:scrollbarStyle="insideInset"
        android:transcriptMode="normal" >

    </ListView>

</RelativeLayout>