<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/cardAvatar"
            android:layout_width="71dp"
            android:layout_height="104dp"
            android:layout_weight="96.86"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3.95"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/cardFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10">
            </EditText>

            <EditText
                android:id="@+id/cardName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="20sp"
        android:text="@string/text_tel" />

    <EditText
        android:id="@+id/cardTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:gravity="right" >
        
	    <Button
	        android:id="@+id/btnCall"
	        android:width="80dip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/call" />

		<Button
		    android:id="@+id/btnText"
	        android:width="80dip"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/message" />
	
	</LinearLayout>
</LinearLayout>