<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity$DummySectionFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/cardAvatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_launcher" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3.95"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/cardFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:ems="10">
            </TextView>

            <EditText
                android:id="@+id/cardName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_weight="0.5"
                android:ems="10"
                android:hint="在此处输入姓名" >

                <requestFocus />
            </EditText>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/text_tel" />

    <EditText
        android:id="@+id/cardTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="在此处输入电话号码"
        android:ems="10"
        android:inputType="phone" />
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:gravity="right" >
        
	    <Button
	        android:id="@+id/cardSave"
	        android:width="50dip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/save" />

		<Button
		    android:id="@+id/cardCancel"
	        android:width="50dip"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/signout" />
	
	</LinearLayout>
</LinearLayout>
